--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<button id="restartButton" onclick="restart()">Restart</button>
 			<div id = "info"></div>
 			<div id="image">
-				<img src="1.jpg"/>
+				<img src="1.jpg" alt="Jakiś budynek"/>
 			</div>		
 		</div>
 		<div class="lorem">
