--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
 	<head>
-		<title>Stronka HTML + CSS</title>
+		<title>Stronka HTML + CSS + JS</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="squares.css">
-		<script type="text/javascript" src="script.js"></script>
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<div id="toolbar">
